--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
           <span class="slider round"></span>
           <span class="absolute-no">weather</span>
         </label>
-        <label class="switch">
+        <!-- <label class="switch">
           <input type="checkbox" class="on-off" checked>
           <span class="slider round"></span>
           <span class="absolute-no">player</span>
-        </label>
+        </label> -->
       </div>
     </div>
   </div>
